# invenio-rdm-migrator

./: .editorconfig  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.rst  run-tests.sh  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  tests.yml
docs/: Makefile  authors.rst  changes.rst  conf.py  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
invenio_rdm_migrator/: __init__.py  logging.py  state.py  testutils.py  utils.py
invenio_rdm_migrator/actions/: __init__.py  base.py
invenio_rdm_migrator/extract/: __init__.py  base.py  identity.py  jsonlines.py  kafka.py  null.py  transactions.py
invenio_rdm_migrator/load/: __init__.py  base.py  ids.py  models.py  postgresql.py  statements.py
invenio_rdm_migrator/load/postgresql/: __init__.py  bulk.py  generators.py  models.py  sequences.py  statement.py  table_generators.py
invenio_rdm_migrator/state/: __init__.py  base.py  communities.py  pids.py  records.py
invenio_rdm_migrator/streams/: __init__.py  cache.py  runner.py  streams.py
invenio_rdm_migrator/streams/actions/: __init__.py  drafts.py  parents.py  users.py
invenio_rdm_migrator/streams/affiliations/: __init__.py  load.py
invenio_rdm_migrator/streams/awards/: __init__.py  load.py
invenio_rdm_migrator/streams/cache/: __init__.py  base.py  communities.py  pids.py  records.py
invenio_rdm_migrator/streams/communities/: __init__.py  load.py  models.py  table_generator.py  transform.py
invenio_rdm_migrator/streams/featured_communities/: __init__.py  load.py  models.py  table_generator.py  transform.py
invenio_rdm_migrator/streams/files/: __init__.py  load.py  models.py  table_generator.py  transform.py
invenio_rdm_migrator/streams/funders/: __init__.py  load.py
invenio_rdm_migrator/streams/github/: __init__.py  load.py  table_generator.py  transform.py
invenio_rdm_migrator/streams/models/: __init__.py  affiliations.py  awards.py  communities.py  files.py  funders.py  github.py  names.py  oai.py  oauth.py  pids.py  records.py  requests.py  users.py
invenio_rdm_migrator/streams/names/: __init__.py  load.py
invenio_rdm_migrator/streams/oauth/: __init__.py  load.py  models.py  transform.py
invenio_rdm_migrator/streams/pids/: __init__.py  models.py
invenio_rdm_migrator/streams/records/: __init__.py  load.py  models.py  state.py  table_generator.py  table_load.py  transform.py
invenio_rdm_migrator/streams/requests/: __init__.py  load.py  models.py  table_generator.py  transform.py
invenio_rdm_migrator/streams/transactions/: __init__.py  drafts.py  files.py  pids.py
invenio_rdm_migrator/streams/users/: __init__.py  load.py  models.py  table_generator.py  transform.py
invenio_rdm_migrator/transform/: __init__.py  base.py  dates.py  encrypt.py  errors.py  identity.py  json.py  transactions.py
tests/: conftest.py  test_ids.py  test_logging.py  test_state.py  test_utils.py  testutils.py
tests/extract/: test_base_extract.py  test_jsonlines.py  test_null.py
tests/load/: test_base_load.py  test_ids.py  test_load_bulk.py  test_load_transactions.py  test_postgresql.py
tests/streams/: test_cache.py  test_streams.py
tests/streams/actions/: conftest.py  test_community_actions.py  test_drafts_actions.py  test_files_actions.py  (+3 more)
tests/transform/: test_base_transform.py  test_dates.py  test_encrypt.py  test_identity.py  test_json.py  test_transactions.py
(+50 files in other folders)
