# -*- coding: utf-8 -*-
#
# Copyright (C) 2022 CERN.
#
# Invenio-RDM-Migrator is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-rdm-migrator
version = attr: invenio_rdm_migrator.__version__
description = InvenioRDM module for data migration.
long_description = file: README.rst, CHANGES.rst
keywords = invenio rdm migration
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-rdm-migrator
classifiers =
    Development Status :: 3 - Alpha

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    orjson>=3.9.5
    jsonlines>=3.1.0
    sqlalchemy>=2.0  # note this will be incompatible with InvenioRDM (see invenio-db)
    sqlalchemy-utils[encrypted]>=0.38.3
    psycopg>=3.1.9
    PyYAML>=5.4.1

[options.extras_require]
tests =
    dictdiffer>=0.9.0
    pytest-black>=0.3.0
    pytest-invenio>=2.1.0,<3.0.0
    pytest-mock>=1.6.0
    sphinx>=4.5.0

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401,D403

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_rdm_migrator --cov-report=term-missing
testpaths = docs tests invenio_rdm_migrator
